--- a/section33/index.html
+++ b/section33/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sesion 33</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -13,21 +14,25 @@
     <h2>Subtitulo 1</h2>
     <h2>Subtitulo 2</h2>
 
-    <p class="main-text">
-        Parrafo principal 1
-    </p>
-
-    <p class="main-text">
-        Parrafo principal 2 
-    </p>
-
-    <p>
-      Parrafo extra
-    </p>
+    <p class="main-text">Parrafo principal 1</p>
+    <p class="main-text">Parrafo principal 2 </p>
+    <p>Parrafo extra</p>
 
     <input id="magic-number" type="text">
 
     <button id="main-button">HAZ CLICK</button>
+
+    <p id="greet">INGRESA UN NOMBRE ARRIBA</p>
+
+    <hr />
+
+    <button id="toggler">MOSTRAR</button>
+    <p id="hidden-text">TEXTO OCULTO</p>
+
+    <hr />
+
+    <button id="toggler-2">MOSTRAR</button>
+    <p id="hidden-text-2" class="hide-text">TEXTO OCULTO</p>
 
     <script src="./assets/js/script.js"></script>
 </body>
